--- a/index.html
+++ b/index.html
@@ -7,6 +7,99 @@
   <title>Brafé</title>
 </head>
 <body>
-
+  <header>
+    <div>
+      <a href="#">
+        <img src="img/brafe.png" alt="Brafé">
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Portfólio</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Cafés com a cara <br> do Brasil</h1>
+    <p>Direto das fazendas de Minas Gerais</p>
+  </main>
+  <section>
+    <div>
+      <div>
+        <img src="img/cafe-1.jpg" alt="Café com amor">
+        <h3>amor</h3>
+      </div>
+      <div>
+        <img src="img/cafe-2.jpg" alt="Café com perfeição">
+        <h3>perfeição</h3>
+      </div>
+    </div>
+    <p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
+  </section>
+  <section>
+    <div>
+      <div>
+        <h2>Paulista</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
+      </div>
+      <div>
+        <h2>Carioca</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
+      </div>
+      <div>
+        <h2>Mineiro</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div>
+      <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
+      <div>
+        <h2>Botafogo</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+    <div>
+      <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
+      <div>
+        <h2>Iguatemi</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+    <div>
+      <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão">
+      <div>
+        <h2>Mineirão</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+        <a href="#">Ver Mapa</a>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div>
+      <div>
+        <h2>Assine nossa newsletter</h2>
+        <p>promoções e eventos mensais</p>
+      </div>
+      <form>
+        <label for="email">E-mail</label>
+        <input id="email" type="email" placeholder="Digite seu e-mail">
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </section>
+  <footer>
+    <div>
+      <p>Este é um projeto da Origamid. Mais em origamid.com <br>
+        Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
+      <img src="img/brafe.png" alt="Brafé">
+    </div>
+  </footer>
 </body>
 </html>
