--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <title>Brafé</title>
 </head>
 <body>
-  <header>
-    <div>
-      <a href="#">
-        <img src="img/brafe.png" alt="Brafé">
-      </a>
-    </div>
-    <nav>
+<header class="menu">
+  <div class="menu-container">
+    <a class="menu-logo" href="#">
+      <img src="img/brafe.png" alt="Brafé">
+    </a>
+    <nav class="menu-nav">
       <ul>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Produtos</a></li>
@@ -21,85 +20,87 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-  </header>
-  <main>
-    <h1>Cafés com a cara <br> do Brasil</h1>
-    <p>Direto das fazendas de Minas Gerais</p>
-  </main>
-  <section>
-    <div>
-      <div>
-        <img src="img/cafe-1.jpg" alt="Café com amor">
-        <h3>amor</h3>
-      </div>
-      <div>
-        <img src="img/cafe-2.jpg" alt="Café com perfeição">
-        <h3>perfeição</h3>
-      </div>
+  </div>
+</header>
+<main class="intro">
+  <h1>Cafés com a cara <br> do Brasil</h1>
+  <p>Direto das fazendas de Minas Gerais</p>
+</main>
+<section class="sobre">
+  <div class="sobre-container">
+    <div class="sobre-item">
+      <img src="img/cafe-1.jpg" alt="Café com amor">
+      <h3>amor</h3>
     </div>
-    <p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
-  </section>
-  <section>
-    <div>
-      <div>
-        <h2>Paulista</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
-      </div>
-      <div>
-        <h2>Carioca</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
-      </div>
-      <div>
-        <h2>Mineiro</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
-      </div>
+    <div class="sobre-item">
+      <img src="img/cafe-2.jpg" alt="Café com perfeição">
+      <h3>perfeição</h3>
     </div>
-  </section>
-  <section>
-    <div>
-      <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
-      <div>
-        <h2>Botafogo</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
-        <a href="#">Ver Mapa</a>
-      </div>
+  </div>
+  <p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
+</section>
+<section class="produtos">
+  <div class="produtos-container">
+    <div class="produtos-item">
+      <h2 class="produtos-carioca">Paulista</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
     </div>
-    <div>
-      <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
-      <div>
-        <h2>Iguatemi</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
-        <a href="#">Ver Mapa</a>
-      </div>
+    <div class="produtos-item">
+      <h2 class="produtos-paulista">Carioca</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
     </div>
-    <div>
-      <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão">
-      <div>
-        <h2>Mineirão</h2>
-        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
-        <a href="#">Ver Mapa</a>
-      </div>
+    <div class="produtos-item">
+      <h2 class="produtos-mineiro">Mineiro</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará para a Região Sudeste e as cultivou no Rio de Janeiro.</p>
     </div>
-  </section>
-  <section>
+  </div>
+  <a href="#" class="produtos-btn">Saiba Mais</a>
+</section>
+<section class="locais">
+  <div class="locais-item">
+    <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
     <div>
-      <div>
-        <h2>Assine nossa newsletter</h2>
-        <p>promoções e eventos mensais</p>
-      </div>
-      <form>
-        <label for="email">E-mail</label>
-        <input id="email" type="email" placeholder="Digite seu e-mail">
-        <button type="submit">Enviar</button>
-      </form>
+      <h2>Botafogo</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
     </div>
-  </section>
-  <footer>
+  </div>
+  <div class="locais-item">
+    <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
     <div>
-      <p>Este é um projeto da Origamid. Mais em origamid.com <br>
-        Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
-      <img src="img/brafe.png" alt="Brafé">
+      <h2>Iguatemi</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
     </div>
-  </footer>
+  </div>
+  <div class="locais-item">
+    <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão">
+    <div>
+      <h2>Mineirão</h2>
+      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+      <a href="#">Ver Mapa</a>
+    </div>
+  </div>
+</section>
+<section class="assine">
+  <div class="assine-container">
+    <div class="assine-info">
+      <h2>Assine nossa newsletter</h2>
+      <p>promoções e eventos mensais</p>
+    </div>
+    <form>
+      <label for="email">E-mail</label>
+      <input id="email" type="email" placeholder="Digite seu e-mail">
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+</section>
+<footer class="footer">
+  <div class="footer-container">
+    <p>Este é um projeto da Origamid. Mais em origamid.com <br>
+      Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
+    <img src="img/brafe.png" alt="Brafé">
+  </div>
+</footer>
 </body>
 </html>
