--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 				<h3>perfeição</h3>
 			</div>
 		</div>
-		<p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalm
-aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
+		<p>O café é uma bebida produzida a partir dos grãos torrados do fruto do cafeeiro. É servido tradicionalmente quente, mas também pode ser consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente 80 a 140 mg para cada 207 ml dependendo do método de preparação.</p>
 	</section>
 	
 	<section class="produtos">
-		<div>
+		<div class="container">
 			<div class="produtos-item">
 				<h2 class="produtos-paulista">Paulista</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
@@ -61,53 +60,60 @@ aente quente, mas também pode ser consumido gelado. Ele é um estimulante, por 
 	</section>
 	
 	<section class="locais">
-		<div class="locais-item">
-			<img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
-			<div>
+		<div class="locais-item container">
+      <div class="locais-img">
+        <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
+      </div>
+			<div class="locais-info">
 				<h2>Botafogo</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
 			</div>
 		</div>
 		
-		<div class="locais-item">
-			<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
-			<div>
+		<div class="locais-item container">
+      <div class="locais-img">
+  			<img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
+      </div>
+			<div class="locais-info">
 				<h2>Iguatemi</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
 			</div>
 		</div>
 		
-		<div class="locais-item">
-			<img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
-			<div>
+		<div class="locais-item container">
+      <div class="locais-img">
+       <img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
+      </div>
+      <div class="locais-info">
 				<h2>Mineirão</h2>
 				<p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
 				<a href="#">Ver Mapa</a>
 			</div>
 		</div>
-	
 	</section>
 	
 	<section class="assine">
-		<div>
+		<div class="container">
 			<div class="assine-info">
 				<h2>Assine Nossa Newsletter</h2>
 				<p>promoções e eventos mensais</p>
 			</div>
 			<form>
-				<label>E-mail</label>
-				<input type="text" placeholder="Digite seu e-mail">
+				<label for="email">E-mail</label>
+				<input id="email" type="text" placeholder="Digite seu e-mail">
 				<button type="submit">Enviar</button>
 			</form>
 		</div>
 	</section>
 	
 	<footer class="footer">
-		<div>
+		<div class="container">
 			<p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
-			<img src="img/brafe.png" alt="Brafé">
+      <div class="footer-img">
+        <img src="img/brafe.png" alt="Brafé">
+      </div>
 		</div>
 	</footer>
 	
