--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
   <title>Brafé 1</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 <header class="menu">
-  <div>
-    <a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>
-    <nav class="menu-nav">
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
+  <div class="container">
+    <div class="row">
+      <a class="menu-logo col-md-4" href="#">
+        <img src="img/brafe.png" alt="Brafé">
+      </a>
+      <nav class="menu-nav col-md-8">
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </header>
 
@@ -27,14 +32,14 @@
   <p>Direto das fazendas de Minas Gerais</p>
 </main>
 
-<section class="sobre">
+<section class="sobre container">
   <h2>Uma Mistura de</h2>
-  <div>
-    <div class="sobre-item">
+  <div class="row">
+    <div class="col-sm sobre-item">
       <img src="img/cafe-1.jpg" alt="Café 1">
       <h3>amor</h3>
     </div>
-    <div class="sobre-item">
+    <div class="col-sm sobre-item">
       <img src="img/cafe-2.jpg" alt="Café 2">
       <h3>perfeição</h3>
     </div>
@@ -43,73 +48,86 @@
 </section>
 
 <section class="produtos">
-  <div>
-    <div class="produtos-item">
-      <h2 class="produtos-paulista">Paulista</h2>
-      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
+  <div class="container">
+    <div class="row">
+      <div class="produtos-item col-sm">
+        <h2 class="produtos-paulista">Paulista</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo
+          noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
+      </div>
+      <div class="produtos-item col-sm">
+        <h2 class="produtos-carioca">Carioca</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo
+          noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
+      </div>
+      <div class="produtos-item col-sm">
+        <h2 class="produtos-mineiro">Mineiro</h2>
+        <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo
+          noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
+      </div>
     </div>
-    <div class="produtos-item">
-      <h2 class="produtos-carioca">Carioca</h2>
-      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
-    </div>
-    <div class="produtos-item">
-      <h2 class="produtos-mineiro">Mineiro</h2>
-      <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
-    </div>
+    <a class="produtos-btn" href="#">Saiba Mais</a>
   </div>
-  <a class="produtos-btn" href="#">Saiba Mais</a>
 </section>
 
-<section class="locais">
-  <div class="locais-item">
-    <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
-    <div>
+<section class="locais container">
+  <div class="locais-item row">
+    <div class="col-sm">
+      <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
+    </div>
+    <div class="col-sm">
       <h2>Botafogo</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
       <a href="#">Ver Mapa</a>
     </div>
   </div>
-
-  <div class="locais-item">
-    <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
-    <div>
+  <div class="locais-item row">
+    <div class="col-sm">
+      <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
+    </div>
+    <div class="col-sm">
       <h2>Iguatemi</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
       <a href="#">Ver Mapa</a>
     </div>
   </div>
-
-  <div class="locais-item">
-    <img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
-    <div>
+  <div class="locais-item row">
+    <div class="col-sm">
+      <img src="img/botafogo.jpg" alt="Brafé unidade Mineirão">
+    </div>
+    <div class="col-sm">
       <h2>Mineirão</h2>
       <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
       <a href="#">Ver Mapa</a>
     </div>
   </div>
-
 </section>
 
 <section class="assine">
-  <div>
-    <div class="assine-info">
-      <h2>Assine Nossa Newsletter</h2>
-      <p>promoções e eventos mensais</p>
+  <div class="container">
+    <div class="row">
+      <div class="assine-info col-sm">
+        <h2>Assine Nossa Newsletter</h2>
+        <p>promoções e eventos mensais</p>
+      </div>
+      <form class="row">
+        <label for="email">E-mail</label>
+        <input id="email" type="text" placeholder="Digite seu e-mail">
+        <button type="submit">Enviar</button>
+      </form>
     </div>
-    <form>
-      <label for="email">E-mail</label>
-      <input id="email" type="text" placeholder="Digite seu e-mail">
-      <button type="submit">Enviar</button>
-    </form>
   </div>
 </section>
 
 <footer class="footer">
-  <div>
-    <p>Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
-    <img src="img/brafe.png" alt="Brafé">
+  <div class="container">
+    <div class="row">
+      <p class="col-sm-10">Este é um projeto da Origamid. Mais em origamid.com<br>Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
+      <div class="col-sm">
+        <img src="img/brafe.png" alt="Brafé">
+      </div>
+    </div>
   </div>
 </footer>
-
 </body>
 </html>
