--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <header class="menu">
   <div class="container">
-    <div class="row">
-      <a class="menu-logo col-md-4" href="#">
+    <div class="row align-items-center">
+      <a class="menu-logo col-md-4" href="index.html">
         <img src="img/brafe.png" alt="Brafé">
       </a>
       <nav class="menu-nav col-md-8">
         <ul>
           <li><a href="#">Sobre</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#">Brafé 1</a></li>
+          <li><a href="#">Brafé 2</a></li>
+          <li><a href="#">Brafé 3</a></li>
         </ul>
       </nav>
     </div>
@@ -110,7 +110,7 @@
         <h2>Assine Nossa Newsletter</h2>
         <p>promoções e eventos mensais</p>
       </div>
-      <form class="row">
+      <form class="d-flex flex-wrap justify-content-center">
         <label for="email">E-mail</label>
         <input id="email" type="text" placeholder="Digite seu e-mail">
         <button type="submit">Enviar</button>
