chore: adds body HTML content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
+  <h1>Reliable, efficient delivery <br><b>Powered by Technology</b></h1>
+  <div>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</div>
+  <div>
+    <h3>Supervisor</h3>
+    <div>Monitors activity to identify project roadblocks</div>
+    <img src="./images/icon-supervisor.svg" alt="Supervisor">
+  </div>
+  <div>
+    <h3>Team Builder</h3>
+    <div>Scans our talent network to create the optimal team for your project</div>
+    <img src="./images/icon-team-builder.svg" alt="Team Builder">
+  </div>
+  <div>
+    <h3>Karma</h3>
+    <div>Regularity evaluates our talent to ensure quality</div>
+    <img src="./images/icon-karma.svg" alt="Karma">
+  </div>
+  <div>
+    <h3>Calculator</h3>
+    <div>Uses data from past projects to provide better delivery estimates</div>
+    <img src="./images/icon-calculator.svg" alt="Calculator">
+  </div>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
